# deribit_trading_management

./: CMakeLists.txt
include/: config.h  order_manager.h  utils.h  websocket_server.h
src/: main.cpp  order_manager.cpp  utils.cpp  websocket_server.cpp
